# MLOPS

./: .dockerignore  .dvcignore  .env  .env.template  .gitignore  Dockerfile  README.md  Untitled.ipynb  docker-compose.monitoring.yml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml  mlops-ci-cd.yml  predict.yml  retrain.yml  train.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
config/: prometheus.yml
data/: green_tripdata_2025-02.parquet.dvc
data/processed/: .gitignore  churn_cleaned.csv  data_stats.json
data/raw/: churn.csv  churn.csv.dvc
grafana/provisioning/dashboards/: model-drift-dashboard.json
metrics/: rmse.json
models/: model.xgb  preprocessor.b
predictions/data/: metadata_2026-01-04.json  metadata_2026-01-05.json  metadata_2026-01-06.json
predictions/reports/: drift_2026-01-04.html  drift_2026-01-05.html
src/: __init__.py  fetch_data.py  generate_mock_data.py  predict.py  prepare.py  preprocess.py  serve.py  train.py
src/train/: experiment.py
