[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=8.0.0",
    "dvc>=3.65.0",
    "fastparquet>=2024.11.0",
    "hyperopt>=0.2.7",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "linearmodels>=7.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
